--- a/Next_Word_Predition.ipynb
+++ b/Next_Word_Predition.ipynb
@@ -147,106 +147,31 @@
         "    print(f\"Session crashed: {str(e)}\")\n",
         "\n",
         "test_sentences = [\n",
-        "    \"The sun began to\",           # 1\n",
-        "    \"She walked through the\",     # 2g\n",
-        "    \"He decided to take\",         # 3g\n",
-        "    \"In the middle of\",           # 4\n",
-        "    \"The old house was\",          # 5\n",
-        "    \"They watched the stars\",     # 6\n",
-        "    \"A loud noise came\",          # 7\n",
-        "    \"The teacher explained the\",  # 8\n",
-        "    \"After a long day\",           # 9\n",
-        "    \"The cat jumped onto\",        # 10\n",
-        "    \"A small bird flew\",          # 11\n",
-        "    \"He opened the door\",         # 12\n",
-        "    \"She smiled at her\",          # 13\n",
-        "    \"The dog barked at\",          # 14\n",
-        "    \"We sat by the\",              # 15\n",
-        "    \"The rain started to\",        # 16\n",
-        "    \"He wrote a letter\",          # 17\n",
-        "    \"She painted the walls\",      # 18\n",
-        "    \"The children played in\",     # 19\n",
-        "    \"I forgot to bring\",          # 20\n",
-        "    \"The clock struck twelve\",    # 21\n",
-        "    \"They climbed the tall\",      # 22\n",
-        "    \"A bright light shone\",       # 23\n",
-        "    \"The car stopped at\",         # 24\n",
-        "    \"She whispered in his\",       # 25\n",
-        "    \"He tripped on the\",          # 26\n",
-        "    \"The baby laughed at\",        # 27\n",
-        "    \"We listened to the\",         # 28\n",
-        "    \"The wind blew through\",      # 29\n",
-        "    \"She dropped her phone\",      # 30\n",
-        "    \"He shouted across the\",      # 31\n",
-        "    \"The book fell off\",          # 32\n",
-        "    \"They danced under the\",      # 33\n",
-        "    \"A strange sound echoed\",     # 34\n",
-        "    \"The teacher handed out\",     # 35\n",
-        "    \"I saw a shooting\",           # 36\n",
-        "    \"She tied her shoes\",         # 37\n",
-        "    \"He drove to the\",            # 38\n",
-        "    \"The flowers bloomed in\",     # 39\n",
-        "    \"We waited for the\",          # 40\n",
-        "    \"The moon glowed brightly\",   # 41\n",
-        "    \"They built a sandcastle\",    # 42\n",
-        "    \"A cold breeze swept\",        # 43\n",
-        "    \"The chef prepared a\",        # 44\n",
-        "    \"She forgot her lines\",       # 45\n",
-        "    \"He jumped into the\",         # 46\n",
-        "    \"The bell rang at\",           # 47\n",
-        "    \"They laughed at the\",        # 48\n",
-        "    \"A tiny frog hopped\",         # 49\n",
-        "    \"The sky turned dark\",        # 50\n",
-        "    \"She picked up the\",          # 51\n",
-        "    \"He stared at the\",           # 52\n",
-        "    \"The train arrived at\",       # 53\n",
-        "    \"We hiked up the\",            # 54\n",
-        "    \"The fire crackled in\",       # 55\n",
-        "    \"She waved to her\",           # 56\n",
-        "    \"He fixed the broken\",        # 57\n",
-        "    \"The kids drew with\",         # 58\n",
-        "    \"I heard a loud\",             # 59\n",
-        "    \"The river flowed through\",   # 60\n",
-        "    \"They sang a happy\",          # 61\n",
-        "    \"A black cat crossed\",        # 62\n",
-        "    \"The waiter brought the\",     # 63\n",
-        "    \"She cleaned the dusty\",      # 64\n",
-        "    \"He planted a tree\",          # 65\n",
-        "    \"The snow fell gently\",       # 66\n",
-        "    \"We watched a funny\",         # 67\n",
-        "    \"The phone rang during\",      # 68\n",
-        "    \"She baked a delicious\",      # 69\n",
-        "    \"He climbed over the\",        # 70\n",
-        "    \"The stars twinkled in\",      # 71\n",
-        "    \"They ran to the\",            # 72\n",
-        "    \"A heavy rain poured\",        # 73\n",
-        "    \"The librarian sorted the\",   # 74\n",
-        "    \"I tripped on a\",             # 75\n",
-        "    \"The puppy chased its\",       # 76\n",
-        "    \"She wrote in her\",           # 77\n",
-        "    \"He pointed at the\",          # 78\n",
-        "    \"The leaves fell from\",       # 79\n",
-        "    \"We swam in the\",             # 80\n",
-        "    \"The thunder roared in\",      # 81\n",
-        "    \"They shared a warm\",         # 82\n",
-        "    \"A bright rainbow appeared\",  # 83\n",
-        "    \"The farmer fed the\",         # 84\n",
-        "    \"She sewed a new\",            # 85\n",
-        "    \"He kicked the soccer\",       # 86\n",
-        "    \"The clock ticked loudly\",    # 87\n",
-        "    \"They whispered in the\",      # 88\n",
-        "    \"A small boat sailed\",        # 89\n",
-        "    \"The sun set behind\",         # 90\n",
-        "    \"She laughed at the\",         # 91\n",
-        "    \"He carried a heavy\",         # 92\n",
-        "    \"The birds chirped in\",       # 93\n",
-        "    \"We painted the old\",         # 94\n",
-        "    \"The ice melted in\",          # 95\n",
-        "    \"She called her best\",        # 96\n",
-        "    \"He drew a picture\",          # 97\n",
-        "    \"The wind howled through\",    # 98\n",
-        "    \"They jumped into the\",       # 99\n",
-        "    \"A loud crash woke\",          # 100\n",
+        "    \"She walked through the\",     # 2gg\n",
+        "    \"He decided to take\",         # 3gg\n",
+        "    \"The old house was\",          # 5g\n",
+        "    \"A loud noise came\",          # 7gg\n",
+        "    \"The teacher explained the\",  # 8gg\n",
+        "    \"The cat jumped onto\",        # 10g\n",
+        "    \"He opened the door\",         # 12gg\n",
+        "    \"She smiled at her\",          # 13gg\n",
+        "    \"The dog barked at\",          # 14g\n",
+        "    \"She painted the walls\",      # 18g\n",
+        "    \"The car stopped at\",         # 24g\n",
+        "    \"He shouted across the\",      # 31g\n",
+        "    \"A strange sound echoed\",     # 34gg\n",
+        "    \"He drove to the\",            # 38g\n",
+        "    \"The moon glowed brightly\",   # 41g\n",
+        "    \"A cold breeze swept\",        # 43g\n",
+        "    \"He jumped into the\",         # 46g\n",
+        "    \"The bell rang at\",           # 47gg\n",
+        "    \"He stared at the\",           # 52g\n",
+        "    \"The fire crackled in\",       # 55g\n",
+        "    \"I heard a loud\",             # 59g\n",
+        "    \"The river flowed through\",   # 60g\n",
+        "    \"He climbed over the\",        # 70g\n",
+        "    \"A small boat sailed\",        # 89g\n",
+        "    \"The sun set behind\",         # 90g\n",
         "]\n",
         "\n",
         "for sentence in test_sentences:\n",
@@ -258,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKOQ_M1FxUBx",
-        "outputId": "dda19ee9-a443-4288-ab29-71d55ecb3784"
+        "outputId": "beace9fd-a6b6-49fa-cd13-f22df5bbc50d"
       },
       "execution_count": null,
       "outputs": [
@@ -278,23 +203,14 @@
             "Seed: The sun\n",
             "Prediction: was shining with\n",
             "\n",
-            "Input: The sun began to\n",
-            "Prediction: reflect on all\n",
-            "\n",
             "Input: She walked through the\n",
             "Prediction: dense vegetation, home\n",
             "\n",
             "Input: He decided to take\n",
             "Prediction: a train to\n",
             "\n",
-            "Input: In the middle of\n",
-            "Prediction: the three gentlemen\n",
-            "\n",
             "Input: The old house was\n",
             "Prediction: none other than\n",
-            "\n",
-            "Input: They watched the stars\n",
-            "Prediction: and ready to\n",
             "\n",
             "Input: A loud noise came\n",
             "Prediction: from somewhere downstairs.\n",
@@ -302,14 +218,8 @@
             "Input: The teacher explained the\n",
             "Prediction: presence of the\n",
             "\n",
-            "Input: After a long day\n",
-            "Prediction: in the autumn\n",
-            "\n",
             "Input: The cat jumped onto\n",
             "Prediction: the carpet. His\n",
-            "\n",
-            "Input: A small bird flew\n",
-            "Prediction: open, and a\n",
             "\n",
             "Input: He opened the door\n",
             "Prediction: to the living\n",
@@ -320,98 +230,26 @@
             "Input: The dog barked at\n",
             "Prediction: the time of\n",
             "\n",
-            "Input: We sat by the\n",
-            "Prediction: brazier I felt\n",
-            "\n",
-            "Input: The rain started to\n",
-            "Prediction: move about, crawling\n",
-            "\n",
-            "Input: He wrote a letter\n",
-            "Prediction: from Westhouse &\n",
-            "\n",
             "Input: She painted the walls\n",
             "Prediction: of the monastery\n",
-            "\n",
-            "Input: The children played in\n",
-            "Prediction: this little mystery.\n",
-            "\n",
-            "Input: I forgot to bring\n",
-            "Prediction: the timorous visitor\n",
-            "\n",
-            "Input: The clock struck twelve\n",
-            "Prediction: or so. This\n",
-            "\n",
-            "Input: They climbed the tall\n",
-            "Prediction: man who sat\n",
-            "\n",
-            "Input: A bright light shone\n",
-            "Prediction: out right in\n",
             "\n",
             "Input: The car stopped at\n",
             "Prediction: the door. He\n",
             "\n",
-            "Input: She whispered in his\n",
-            "Prediction: chair and paced\n",
-            "\n",
-            "Input: He tripped on the\n",
-            "Prediction: other side of\n",
-            "\n",
-            "Input: The baby laughed at\n",
-            "Prediction: for my pains.\n",
-            "\n",
-            "Input: We listened to the\n",
-            "Prediction: exhortations of her\n",
-            "\n",
-            "Input: The wind blew through\n",
-            "Prediction: long pipes of\n",
-            "\n",
-            "Input: She dropped her phone\n",
-            "Prediction: rings and Monica\n",
-            "\n",
             "Input: He shouted across the\n",
             "Prediction: room and closed\n",
-            "\n",
-            "Input: The book fell off\n",
-            "Prediction: by themselves. But\n",
-            "\n",
-            "Input: They danced under the\n",
-            "Prediction: terms of this\n",
             "\n",
             "Input: A strange sound echoed\n",
             "Prediction: in the corridors.\n",
             "\n",
-            "Input: The teacher handed out\n",
-            "Prediction: of the room\n",
-            "\n",
-            "Input: I saw a shooting\n",
-            "Prediction: them down.” I\n",
-            "\n",
-            "Input: She tied her shoes\n",
-            "Prediction: and a bride’s\n",
-            "\n",
             "Input: He drove to the\n",
-            "Prediction: Hereford Arms where\n",
-            "\n",
-            "Input: The flowers bloomed in\n",
-            "Prediction: their rude abode,\n",
-            "\n",
-            "Input: We waited for the\n",
-            "Prediction: first time that\n",
+            "Prediction: \"Defects,\" such as,\n",
             "\n",
             "Input: The moon glowed brightly\n",
             "Prediction: in the wintry\n",
             "\n",
-            "Input: They built a sandcastle\n",
-            "Prediction: of the Project\n",
-            "\n",
             "Input: A cold breeze swept\n",
             "Prediction: out of the\n",
-            "\n",
-            "Input: The chef prepared a\n",
-            "Prediction: few minutes he\n",
-            "\n",
-            "Input: She forgot her lines\n",
-            "Prediction: of music with\n",
             "\n",
             "Input: He jumped into the\n",
             "Prediction: air like a\n",
@@ -419,38 +257,11 @@
             "Input: The bell rang at\n",
             "Prediction: the time of\n",
             "\n",
-            "Input: They laughed at the\n",
-            "Prediction: door of the\n",
-            "\n",
-            "Input: A tiny frog hopped\n",
-            "Prediction: of the Project\n",
-            "\n",
-            "Input: The sky turned dark\n",
-            "Prediction: to me.” “Proceed,\n",
-            "\n",
-            "Input: She picked up the\n",
-            "Prediction: morning paper from\n",
-            "\n",
             "Input: He stared at the\n",
             "Prediction: door of the\n",
             "\n",
-            "Input: The train arrived at\n",
-            "Prediction: the village of\n",
-            "\n",
-            "Input: We hiked up the\n",
-            "Prediction: stair, and a\n",
-            "\n",
             "Input: The fire crackled in\n",
             "Prediction: the United States\n",
-            "\n",
-            "Input: She waved to her\n",
-            "Prediction: that she was\n",
-            "\n",
-            "Input: He fixed the broken\n",
-            "Prediction: rainbow of the\n",
-            "\n",
-            "Input: The kids drew with\n",
-            "Prediction: the greatest attention.\n",
             "\n",
             "Input: I heard a loud\n",
             "Prediction: and authoritative tap.\n",
@@ -458,125 +269,14 @@
             "Input: The river flowed through\n",
             "Prediction: the dense vegetation,\n",
             "\n",
-            "Input: They sang a happy\n",
-            "Prediction: and prosperous man,\n",
-            "\n",
-            "Input: A black cat crossed\n",
-            "Prediction: the threshold the\n",
-            "\n",
-            "Input: The waiter brought the\n",
-            "Prediction: body into her\n",
-            "\n",
-            "Input: She cleaned the dusty\n",
-            "Prediction: gilt horns of\n",
-            "\n",
-            "Input: He planted a tree\n",
-            "Prediction: until he should\n",
-            "\n",
-            "Input: The snow fell gently\n",
-            "Prediction: to his father\n",
-            "\n",
-            "Input: We watched a funny\n",
-            "Prediction: sort of business\n",
-            "\n",
-            "Input: The phone rang during\n",
-            "Prediction: the last few\n",
-            "\n",
-            "Input: She baked a delicious\n",
-            "Prediction: proprietary form, including\n",
-            "\n",
             "Input: He climbed over the\n",
             "Prediction: edge of the\n",
-            "\n",
-            "Input: The stars twinkled in\n",
-            "Prediction: the United States\n",
-            "\n",
-            "Input: They ran to the\n",
-            "Prediction: Project Gutenberg Literary\n",
-            "\n",
-            "Input: A heavy rain poured\n",
-            "Prediction: unenforceability of any\n",
-            "\n",
-            "Input: The librarian sorted the\n",
-            "Prediction: door of the\n",
-            "\n",
-            "Input: I tripped on a\n",
-            "Prediction: physical medium, you\n",
-            "\n",
-            "Input: The puppy chased its\n",
-            "Prediction: own grounds. A\n",
-            "\n",
-            "Input: She wrote in her\n",
-            "Prediction: own mind (as\n",
-            "\n",
-            "Input: He pointed at the\n",
-            "Prediction: door of the\n",
-            "\n",
-            "Input: The leaves fell from\n",
-            "Prediction: her trembling fingers\n",
-            "\n",
-            "Input: We swam in the\n",
-            "Prediction: United States without\n",
-            "\n",
-            "Input: The thunder roared in\n",
-            "Prediction: the United States\n",
-            "\n",
-            "Input: They shared a warm\n",
-            "Prediction: room fitted out\n",
-            "\n",
-            "Input: A bright rainbow appeared\n",
-            "Prediction: to be a\n",
-            "\n",
-            "Input: The farmer fed the\n",
-            "Prediction: people who once\n",
-            "\n",
-            "Input: She sewed a new\n",
-            "Prediction: idea to Alice,\n",
-            "\n",
-            "Input: He kicked the soccer\n",
-            "Prediction: of the Project\n",
-            "\n",
-            "Input: The clock ticked loudly\n",
-            "Prediction: as even this\n",
-            "\n",
-            "Input: They whispered in the\n",
-            "Prediction: United States without\n",
             "\n",
             "Input: A small boat sailed\n",
             "Prediction: away from them.\n",
             "\n",
             "Input: The sun set behind\n",
-            "Prediction: the Himalayan peaks,\n",
-            "\n",
-            "Input: She laughed at the\n",
-            "Prediction: door of the\n",
-            "\n",
-            "Input: He carried a heavy\n",
-            "Prediction: fur muff that\n",
-            "\n",
-            "Input: The birds chirped in\n",
-            "Prediction: the United States\n",
-            "\n",
-            "Input: We painted the old\n",
-            "Prediction: man and Agatha.\n",
-            "\n",
-            "Input: The ice melted in\n",
-            "Prediction: the United States\n",
-            "\n",
-            "Input: She called her best\n",
-            "Prediction: to climb up\n",
-            "\n",
-            "Input: He drew a picture\n",
-            "Prediction: of ruin. The\n",
-            "\n",
-            "Input: The wind howled through\n",
-            "Prediction: the dense vegetation,\n",
-            "\n",
-            "Input: They jumped into the\n",
-            "Prediction: air like a\n",
-            "\n",
-            "Input: A loud crash woke\n",
-            "Prediction: from troubled dreams,\n"
+            "Prediction: the Himalayan peaks,\n"
           ]
         }
       ]
