--- a/Next_Word_Predition.ipynb
+++ b/Next_Word_Predition.ipynb
@@ -27,14 +27,13 @@
         "from collections import defaultdict, Counter\n",
         "import math\n",
         "\n",
-        "# Preprocessing Improvements\n",
+        "# Data cleaning\n",
         "def preprocess_text(file_path):\n",
-        "    \"\"\"Load and clean text data.\"\"\"\n",
         "    with open(file_path, 'r', encoding='utf-8', errors='ignore') as file:\n",
         "        text = file.read()\n",
         "    return text.replace('\\n', ' ').replace('\\r', '').replace('\\ufeff', '')\n",
         "\n",
-        "# Load and preprocess multiple files\n",
+        "# Collect data from multiple files\n",
         "file_paths = [\"data1.txt\", \"data2.txt\", \"data3.txt\", \"data4.txt\"]\n",
         "all_data = \"\"\n",
         "\n",
@@ -48,11 +47,11 @@
         "\n",
         "# Check data size to prevent memory issues\n",
         "print(\"Total preprocessed text length:\", len(all_data))\n",
-        "if len(all_data) > 10_000_000:  # Arbitrary threshold (10MB of text)\n",
+        "if len(all_data) > 1_000_000_000:  # Threshold (1MGB of text)\n",
         "    print(\"Warning: Input data is very large. Consider reducing it for stability.\")\n",
         "print(\"Sample of combined preprocessed text:\", all_data[:500])\n",
         "\n",
-        "# Optimized Enhanced Markov Chain\n",
+        "# Markov Chain Algo\n",
         "class EnhancedMarkovChain:\n",
         "    def __init__(self, max_order=3, smoothing_alpha=1.0, beam_width=3):\n",
         "        self.max_order = max_order\n",
@@ -63,14 +62,12 @@
         "        self.probs = [defaultdict(dict) for _ in range(max_order + 1)]\n",
         "\n",
         "    def train(self, text):\n",
-        "        \"\"\"Train the model with multiple orders and optimized probability computation.\"\"\"\n",
         "        try:\n",
         "            words = text.split()\n",
         "            self.vocab.update(words)\n",
         "            vocab_size = len(self.vocab)\n",
         "            print(f\"Vocabulary size: {vocab_size}\")\n",
         "\n",
-        "            # Train for each order\n",
         "            for order in range(self.max_order + 1):\n",
         "                transitions = self.transitions[order]\n",
         "                for i in range(len(words) - order):\n",
@@ -78,16 +75,14 @@
         "                    next_word = words[i + order]\n",
         "                    transitions[state][next_word] += 1\n",
         "\n",
-        "            # Precompute probabilities only for observed transitions\n",
         "            for order in range(self.max_order + 1):\n",
         "                transitions = self.transitions[order]\n",
         "                probs = self.probs[order]\n",
         "                for state in transitions:\n",
         "                    total_count = sum(transitions[state].values())\n",
-        "                    for next_word in transitions[state]:  # Only observed next words\n",
+        "                    for next_word in transitions[state]:\n",
         "                        probs[state][next_word] = ((transitions[state][next_word] + self.smoothing_alpha) /\n",
         "                                                  (total_count + self.smoothing_alpha * vocab_size))\n",
-        "                    # Add a small probability for unseen words\n",
         "                    probs[state]['<UNK>'] = self.smoothing_alpha / (total_count + self.smoothing_alpha * vocab_size)\n",
         "\n",
         "            print(f\"Trained with {len(self.vocab)} unique words and {sum(len(t) for t in self.transitions)} transitions.\")\n",
@@ -102,7 +97,7 @@
         "            if not words:\n",
         "                words = [random.choice(list(self.vocab))]\n",
         "\n",
-        "            beam = [(0.0, words)]  # (log_prob, sequence)\n",
+        "            beam = [(0.0, words)]\n",
         "\n",
         "            for _ in range(num_words):\n",
         "                new_beam = []\n",
@@ -112,14 +107,12 @@
         "                        curr_state = state[-order:] if order > 0 else tuple()\n",
         "                        if curr_state in self.transitions[order]:\n",
         "                            probs = self.probs[order][curr_state]\n",
-        "                            # Add top beam_width candidates\n",
         "                            for next_word, prob in sorted(probs.items(), key=lambda x: -x[1])[:self.beam_width]:\n",
         "                                new_log_prob = log_prob + math.log(prob)\n",
         "                                new_seq = seq + [next_word if next_word != '<UNK>' else random.choice(list(self.vocab))]\n",
         "                                new_beam.append((new_log_prob, new_seq))\n",
         "                            break\n",
         "                    else:\n",
-        "                        # Fallback to uniform probability over vocab\n",
         "                        uniform_prob = 1.0 / len(self.vocab)\n",
         "                        for next_word in random.sample(list(self.vocab), self.beam_width):\n",
         "                            new_log_prob = log_prob + math.log(uniform_prob)\n",
@@ -133,13 +126,11 @@
         "            print(f\"Error during generation: {str(e)}\")\n",
         "            return \"Generation failed\"\n",
         "\n",
-        "# Train and test the optimized model\n",
         "try:\n",
         "    markov = EnhancedMarkovChain(max_order=3, smoothing_alpha=1.0, beam_width=3)\n",
         "    markov.train(all_data)\n",
         "    print(\"Enhanced Markov Chain trained!\")\n",
         "\n",
-        "    # Test with a sample seed\n",
         "    test_seed = \"The sun\"\n",
         "    print(f\"Seed: {test_seed}\")\n",
         "    print(f\"Prediction: {markov.generate(test_seed, num_words=3)}\")\n",
@@ -147,31 +138,31 @@
         "    print(f\"Session crashed: {str(e)}\")\n",
         "\n",
         "test_sentences = [\n",
-        "    \"She walked through the\",     # 2gg\n",
-        "    \"He decided to take\",         # 3gg\n",
-        "    \"The old house was\",          # 5g\n",
-        "    \"A loud noise came\",          # 7gg\n",
-        "    \"The teacher explained the\",  # 8gg\n",
-        "    \"The cat jumped onto\",        # 10g\n",
-        "    \"He opened the door\",         # 12gg\n",
-        "    \"She smiled at her\",          # 13gg\n",
-        "    \"The dog barked at\",          # 14g\n",
-        "    \"She painted the walls\",      # 18g\n",
-        "    \"The car stopped at\",         # 24g\n",
-        "    \"He shouted across the\",      # 31g\n",
-        "    \"A strange sound echoed\",     # 34gg\n",
-        "    \"He drove to the\",            # 38g\n",
-        "    \"The moon glowed brightly\",   # 41g\n",
-        "    \"A cold breeze swept\",        # 43g\n",
-        "    \"He jumped into the\",         # 46g\n",
-        "    \"The bell rang at\",           # 47gg\n",
-        "    \"He stared at the\",           # 52g\n",
-        "    \"The fire crackled in\",       # 55g\n",
-        "    \"I heard a loud\",             # 59g\n",
-        "    \"The river flowed through\",   # 60g\n",
-        "    \"He climbed over the\",        # 70g\n",
-        "    \"A small boat sailed\",        # 89g\n",
-        "    \"The sun set behind\",         # 90g\n",
+        "    \"She walked through the\",     # 1\n",
+        "    \"He decided to take\",         # 2\n",
+        "    \"He opened the door\",         # 3\n",
+        "    \"She smiled at her\",          # 4\n",
+        "    \"A strange sound echoed\",     # 5\n",
+        "    \"The bell rang at\",           # 6\n",
+        "    \"The old house was\",          # 7\n",
+        "    \"A loud noise came\",          # 8\n",
+        "    \"The teacher explained the\",  # 9\n",
+        "    \"The cat jumped onto\",        # 10\n",
+        "    \"The dog barked at\",          # 11\n",
+        "    \"She painted the walls\",      # 12\n",
+        "    \"The car stopped at\",         # 13\n",
+        "    \"He shouted across the\",      # 14\n",
+        "    \"He drove to the\",            # 15\n",
+        "    \"The moon glowed brightly\",   # 16\n",
+        "    \"A cold breeze swept\",        # 17\n",
+        "    \"He jumped into the\",         # 18\n",
+        "    \"He stared at the\",           # 19\n",
+        "    \"The fire crackled in\",       # 20\n",
+        "    \"I heard a loud\",             # 21\n",
+        "    \"The river flowed through\",   # 22\n",
+        "    \"He climbed over the\",        # 23\n",
+        "    \"A small boat sailed\",        # 24\n",
+        "    \"The sun set behind\",         # 25\n",
         "]\n",
         "\n",
         "for sentence in test_sentences:\n",
@@ -183,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKOQ_M1FxUBx",
-        "outputId": "beace9fd-a6b6-49fa-cd13-f22df5bbc50d"
+        "outputId": "6e1c0416-fc2f-42a2-f369-54882a8ec4df"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,6 +200,18 @@
             "Input: He decided to take\n",
             "Prediction: a train to\n",
             "\n",
+            "Input: He opened the door\n",
+            "Prediction: to the living\n",
+            "\n",
+            "Input: She smiled at her\n",
+            "Prediction: with a questioning\n",
+            "\n",
+            "Input: A strange sound echoed\n",
+            "Prediction: in the corridors.\n",
+            "\n",
+            "Input: The bell rang at\n",
+            "Prediction: the time of\n",
+            "\n",
             "Input: The old house was\n",
             "Prediction: none other than\n",
             "\n",
@@ -220,12 +223,6 @@
             "\n",
             "Input: The cat jumped onto\n",
             "Prediction: the carpet. His\n",
-            "\n",
-            "Input: He opened the door\n",
-            "Prediction: to the living\n",
-            "\n",
-            "Input: She smiled at her\n",
-            "Prediction: with a questioning\n",
             "\n",
             "Input: The dog barked at\n",
             "Prediction: the time of\n",
@@ -239,11 +236,8 @@
             "Input: He shouted across the\n",
             "Prediction: room and closed\n",
             "\n",
-            "Input: A strange sound echoed\n",
-            "Prediction: in the corridors.\n",
-            "\n",
             "Input: He drove to the\n",
-            "Prediction: \"Defects,\" such as,\n",
+            "Prediction: Hereford Arms where\n",
             "\n",
             "Input: The moon glowed brightly\n",
             "Prediction: in the wintry\n",
@@ -253,9 +247,6 @@
             "\n",
             "Input: He jumped into the\n",
             "Prediction: air like a\n",
-            "\n",
-            "Input: The bell rang at\n",
-            "Prediction: the time of\n",
             "\n",
             "Input: He stared at the\n",
             "Prediction: door of the\n",
