--- a/Next_Word_Predition.ipynb
+++ b/Next_Word_Predition.ipynb
@@ -20,8 +20,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Required Libraries\n",
-        "import pickle\n",
         "import os\n",
         "import random\n",
         "from collections import defaultdict, Counter\n",
@@ -41,15 +39,15 @@
         "    if os.path.exists(file_path):\n",
         "        data = preprocess_text(file_path)\n",
         "        all_data += data + \" \"\n",
-        "        print(f\"Processed {file_path}. Sample: {data[:200]}\")\n",
+        "        print(f\"Processed {file_path}. Sample: {data[:100]}\")\n",
         "    else:\n",
         "        print(f\"Warning: {file_path} not found. Skipping...\")\n",
         "\n",
         "# Check data size to prevent memory issues\n",
         "print(\"Total preprocessed text length:\", len(all_data))\n",
-        "if len(all_data) > 1_000_000_000:  # Threshold (1MGB of text)\n",
+        "if len(all_data) > 1_000_000_000:\n",
         "    print(\"Warning: Input data is very large. Consider reducing it for stability.\")\n",
-        "print(\"Sample of combined preprocessed text:\", all_data[:500])\n",
+        "print(\"Sample of combined preprocessed text:\", all_data[:100])\n",
         "\n",
         "# Markov Chain Algo\n",
         "class EnhancedMarkovChain:\n",
@@ -174,20 +172,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKOQ_M1FxUBx",
-        "outputId": "6e1c0416-fc2f-42a2-f369-54882a8ec4df"
+        "outputId": "a8ef51f6-c166-4243-bc86-a771b49aa5c9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Processed data1.txt. Sample: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.  He lay on his armour-like back, and if he lifted his head a little he could s\n",
-            "Processed data2.txt. Sample:  Project Gutenberg's The Adventures of Sherlock Holmes, by Arthur Conan Doyle  This eBook is for the use of anyone anywhere at no cost and with almost no restrictions whatsoever.  You may copy it, giv\n",
-            "Processed data3.txt. Sample: The sun was shining brightly in the clear blue sky, and a gentle breeze rustled the leaves of the tall trees. People were out enjoying the beautiful weather, some sitting in the park, others taking a \n",
-            "Processed data4.txt. Sample:     Chapter 1        It is a truth universally acknowledged, that a single man in       possession of a good fortune, must be in want of a wife.        However little known the feelings or views of su\n",
+            "Processed data1.txt. Sample: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed in\n",
+            "Processed data2.txt. Sample:  Project Gutenberg's The Adventures of Sherlock Holmes, by Arthur Conan Doyle  This eBook is for the\n",
+            "Processed data3.txt. Sample: The sun was shining brightly in the clear blue sky, and a gentle breeze rustled the leaves of the ta\n",
+            "Processed data4.txt. Sample:     Chapter 1        It is a truth universally acknowledged, that a single man in       possession o\n",
             "Total preprocessed text length: 1797163\n",
-            "Sample of combined preprocessed text: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin.  He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.  The bedding was hardly able to cover it and seemed ready to slide off any moment.  His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.  \"What's happened to me?\" he\n",
+            "Sample of combined preprocessed text: One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed in\n",
             "Vocabulary size: 34751\n",
             "Trained with 34751 unique words and 479778 transitions.\n",
             "Enhanced Markov Chain trained!\n",
@@ -267,7 +265,55 @@
             "Prediction: away from them.\n",
             "\n",
             "Input: The sun set behind\n",
-            "Prediction: the Himalayan peaks,\n"
+            "Prediction: certain implied warranties\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    while True:\n",
+        "        user_input = input(\"\\nEnter a seed sentence (or type 'exit' to quit): \")\n",
+        "        if user_input.lower() == 'exit':\n",
+        "            print(\"Exiting prediction mode. Goodbye!\")\n",
+        "            break\n",
+        "        print(f\"Prediction: {markov.generate(user_input, num_words=1)}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Interactive session crashed: {str(e)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6i7y7fMNXURd",
+        "outputId": "daadc9f9-ecc7-4198-f34d-2dda0c5b4208"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): The river flowed through\n",
+            "Prediction: the\n",
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): the sun is\n",
+            "Prediction: for\n",
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): I am \n",
+            "Prediction: not\n",
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): what are you\n",
+            "Prediction: doing?\n",
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): what are you\n",
+            "Prediction: doing?\n",
+            "\n",
+            "Enter a seed sentence (or type 'exit' to quit): exit\n",
+            "Exiting prediction mode. Goodbye!\n"
           ]
         }
       ]
